<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.wilton</groupId>
    <artifactId>wiltoncode</artifactId>
    <packaging>pom</packaging>
    <version>0.1</version>

    <developers>
        <developer>
            <id>1</id>
            <name>ZhengJinWei</name>
            <email>ex-zhengjinwei001@pingan.com.cn</email>
            <organization>paic</organization>
        </developer>
    </developers>

    <repositories>
        <repository>
            <id>alimaven</id>
            <name>aliyun maven</name>
            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <repository>
            <id>cloudera-releases</id>
            <url>https://repository.cloudera.com/artifactory/cloudera-repos</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <modules>
        <module>wilton-dist</module>
        <module>wilton-module-java</module>
        <module>wilton-module-scala</module>
        <module>wilton-module-spark</module>
    </modules>

    <properties>
        <common.name>common-${project.version}</common.name>
        <httpserver.netty.name>httpserver-netty-${project.version}</httpserver.netty.name>
        <external.api.name>external-api-${project.version}</external.api.name>
        <thrift.name>thrift-${project.version}</thrift.name>
        <read.kv.hbase.name>read-kv-hbase-${project.version}</read.kv.hbase.name>
        <preprocess.features.name>preprocess-features-${project.version}</preprocess.features.name>
        <data.sync.hbase.name>data-sync-hbase-${project.version}</data.sync.hbase.name>
        <logger.name>logger-${project.version}</logger.name>
        <write.file.local.name>write-file-local-${project.version}</write.file.local.name>
        <service.center.name>service-center-${project.version}</service.center.name>
        <service.client.java.name>service-client-java-${project.version}</service.client.java.name>
        <service.client-python.name>service-client-python-${project.version}</service.client-python.name>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.version>3.5</maven.version>
        <enforcer.plugin.version>1.4.1</enforcer.plugin.version>
        <config.version>1.3.1</config.version>
        <argLine.common>
            -server
            -dsa -da -ea:cn.com.paic.model...
            -XX:+AggressiveOpts
            -XX:+TieredCompilation
            -XX:+UseBiasedLocking
            -XX:+UseFastAccessorMethods
            -XX:+OptimizeStringConcat
            -XX:+HeapDumpOnOutOfMemoryError
        </argLine.common>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.typesafe</groupId>
            <artifactId>config</artifactId>
            <version>${config.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.25</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.6.4</version>
        </dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-migrationsupport</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jool-java-8</artifactId>
            <version>0.9.13</version>
        </dependency>
    </dependencies>

    <build>
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.5.0.Final</version>
            </extension>
        </extensions>

        <plugins>
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${enforcer.plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-tools</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>${maven.compiler.source}</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>${maven.version}</version>
                                </requireMavenVersion>
                                <requireProperty>
                                    <regexMessage>
                                        x86_64 JDK must be used
                                    </regexMessage>
                                    <property>os.detected.arch</property>
                                    <regex>^x86_64$</regex>
                                </requireProperty>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <compilerVersion>${maven.compiler.source}</compilerVersion>
                    <fork>true</fork>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <debug>true</debug>
                    <optimize>true</optimize>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <compilerArgument>-Xlint:-options</compilerArgument>
                    <meminitial>256m</meminitial>
                    <maxmem>1024m</maxmem>
                    <excludes>
                        <exclude>**/package-info.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <includes>
                        <include>**/*Test*.java</include>
                        <include>**/*Benchmark*.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/Abstract*</exclude>
                        <exclude>**/*TestUtil*</exclude>
                    </excludes>
                    <runOrder>failedfirst</runOrder>
                    <argLine>${argLine.common}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.7.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
            </plugin>
        </plugins>
    </build>

</project>
